# mkdocs-french

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  mkdocs.yml
docs/contribute/: index.md
docs/css/: pied-piper.css
docs/docs/: about.md  config.md  index.md
docs/docs/reference/: dictionary.md  index.md
docs/guide/: abbrev.md  admonitions.md  casse.md  diacritics.md  foreign.md  getting-started.md  index.md  ligatures.md  lists.md  spacing.md
docs/reference/: index.md
mkdocs_french/: __init__.py  __main__.py  cli.py  constants.py  dictionary.py  plugin.py
mkdocs_french/artifacts/: __init__.py  build.py
mkdocs_french/css/: french-justify.css
mkdocs_french/rules/: __init__.py  abbreviation.py  base.py  casse.py  diacritics.py  ligatures.py  orchestrator.py  ordinaux.py  quotes.py  spacing.py  units.py
mkdocs_french/utils/: text.py
mkdocs_plugin_french/: __init__.py  constants.py  dictionary.py  plugin.py
mkdocs_plugin_french/artifacts/: build.py
mkdocs_plugin_french/css/: french-bullet.css  french-justify.css  wiki.css
mkdocs_plugin_french/rules/: __init__.py  abbreviation.py  base.py  casse.py  diacritics.py  ligatures.py  ordinaux.py  quotes.py  spacing.py  units.py
mkdocs_plugin_french/utils/: text.py
scripts/: build_artifacts.py
tests/: conftest.py  test_artifacts_build.py  test_cli.py  test_dictionary.py  test_plugin.py  test_rules_abbreviation.py  test_rules_casse.py  test_rules_diacritics.py  test_rules_ligatures.py  test_rules_ordinaux.py  test_rules_spacing.py  test_rules_units.py
