[tool.poetry]
name = "mkdocs-french"
version = "0.0.0" # This will be replaced by poetry-dynamic-versioning
description = "Add overlay on french links in MkDocs"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mkdocs_plugin_french" }]
keywords = ["mkdocs", "python", "wiki", "french"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Documentation" = "https://github.com/yves-chevallier/mkdocs-french"
"Source" = "https://github.com/yves-chevallier/mkdocs-french"
"Tracker" = "https://github.com/yves-chevallier/mkdocs-french/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mkdocs = "^1.6.1"
pydantic = "^2.9.2"
unidecode = "^1.4.0"
beautifulsoup4 = "^4.14.2"
rich = "^13.9.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
toml = "^0.10.2"
ruff = "^0.9.1"
mkdocs-material = "^8.2.10"
ipdb = "^0.13.13"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}

[tool.pytest.ini_options]
addopts = ["--cov=mkdocs_plugin_french", "--cov-report=term-missing", "--cov-fail-under=90"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*defaulting to 'en'.*:UserWarning",
    "ignore:.*Could not retrieve summary.*:UserWarning",
]

[tool.poetry.plugins."mkdocs.plugins"]
"french" = "mkdocs_plugin_french.plugin:FrenchPlugin"
